--- a/projetCounter/public/css/app.css
+++ b/projetCounter/public/css/app.css
@@ -1,46 +1,41 @@
 body{
     background-color: blueviolet;
-
 }
 
-.divParent{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 50px;
+.parentDiv{
     height: 100vh;
-    width: 100vw;
-}
-
-.divChild1{
-    /* width: 33%; */
-    display: flex;
-    justify-content: end;
-    flex-direction: column;
-    align-items: center;
-    
-   
-}
-
-.divChild2{
-    /* width: 33%; */
     display: flex;
     justify-content: center;
-    flex-direction: column;
     align-items: center;
-    
-   
 }
 
-.divChild3{
-    /* width: 33%; */
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: center;
-    
-   
+
+.counter-sec{
+  padding: 80px 0;
+  width: 100%;
+  background: #131416;
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  transform: translateY(-50%);
 }
+.counter{
+  font-size: 40px;
+  margin: 20px 0;
+}
+
+.box{
+    flex: 1;
+    text-align: center;
+    padding: 20px;
+    color: #fff;
+    text-transform: uppercase;
+  }
+  .box i{
+    font-size: 40px;
+    color: #333;
+  }
+  
 
 .logoTwitt{
     height: 60px;
@@ -57,14 +52,3 @@ body{
     width: 60px;
 }
 
-.textDiv1{
-
-}
-
-.textDiv2{
-    
-}
-
-.textDiv3{
-    
-}
