--- a/projetCounter/public/css/app.css
+++ b/projetCounter/public/css/app.css
@@ -24,6 +24,16 @@ body{
   margin: 20px 0;
 }
 
+.counter2{
+  font-size: 40px;
+  margin: 20px 0;
+}
+
+.counter3{
+  font-size: 40px;
+  margin: 20px 0;
+}
+
 .box{
     flex: 1;
     text-align: center;
